Added code which allows to calculate data diffrences between matches of each team

--- a/Ekstraklasa.ipynb
+++ b/Ekstraklasa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 352,
    "id": "6e45c3f4-b0bf-4e59-b1ee-f0454039dc72",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 353,
    "id": "6268a614-da96-44a5-8de8-4b03c5a74031",
    "metadata": {
     "scrolled": true,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 354,
    "id": "5a31fb79-d327-4c6a-9f0b-1575a200fb67",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 355,
    "id": "3ede9425",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 356,
    "id": "e6aaf926",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 357,
    "id": "17e9e21f-6040-4faf-b06f-ef7cf98e56e3",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 358,
    "id": "35835fd7-9c01-450d-ab9a-939d428e4f5d",
    "metadata": {
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 359,
    "id": "06a0f67d-4dd9-4026-a05e-cc221f8a3706",
    "metadata": {
     "tags": []
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 360,
    "id": "a61ab541-2b5a-432d-b137-d14aae62a092",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 361,
    "id": "c40f100c-d0be-49d1-b828-0a115a62b5dd",
    "metadata": {
     "tags": []
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 362,
    "id": "1525b176-f603-4b07-acbe-b22689e1d9f3",
    "metadata": {
     "tags": []
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 363,
    "id": "6e90118e",
    "metadata": {
     "tags": []
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 364,
    "id": "5ecfcc82-9556-430a-a96c-367589daec41",
    "metadata": {
     "tags": []
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 365,
    "id": "c47736a2-ae3f-4e6f-bac7-80cf3db74aac",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 366,
    "id": "97ead2d8",
    "metadata": {},
    "outputs": [],
@@ -412,81 +412,66 @@
     "            else:    \n",
     "                addedPoints.append(round(sum(tmpTeamPoints[i-4:i]),2))\n",
     "\n",
-    "    my_dict = dict(zip(tmpTeam.index, addedPoints))\n",
-    "    return my_dict\n"
+    "    p_dict = dict(zip(tmpTeam[\"Index\"], addedPoints))\n",
+    "    d_dict = dict(zip(tmpTeam[\"Index\"], dateDiff))\n",
+    "    return p_dict,d_dict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 367,
    "id": "9177017c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "indexes = out_data.index\n",
-    "out_data[\"Index\"]=indexes\n",
+    "\n",
+    "out_data[\"Index\"]=out_data.index\n",
     "\n",
     "out_data=out_data.assign(Accumulated_home_points=None)\n",
     "out_data=out_data.assign(Accumulated_away_points=None)\n",
+    "out_data=out_data.assign(Add_Accumulated_home_points=None)\n",
+    "out_data=out_data.assign(Add_Accumulated_away_points=None)\n",
     "out_data=out_data.sort_values(by=[\"Index\"],ascending=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 368,
    "id": "91b77cc4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": ".iloc requires numeric indexers, got ['  Górnik Zabrze  ' 0 2 '  Cracovia  ' Timestamp('2021-07-18 00:00:00')\n 0.0 3.0 -0.2 0.2 None None 0]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[171], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m dic:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m out_data\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[1;32m----> 8\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m key\u001b[38;5;241m==\u001b[39mindex[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m out_data\u001b[38;5;241m.\u001b[39miloc[index][\u001b[38;5;241m0\u001b[39m]:\n\u001b[0;32m      9\u001b[0m             out_data\u001b[38;5;241m.\u001b[39mat[index[\u001b[38;5;241m0\u001b[39m]][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccumulated_home_points\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39mdic[key]\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m key\u001b[38;5;241m==\u001b[39mindex[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m out_data\u001b[38;5;241m.\u001b[39miloc[index][\u001b[38;5;241m3\u001b[39m]:\n",
-      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexing.py:1097\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1095\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_scalar_access(key):\n\u001b[0;32m   1096\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_get_value(\u001b[38;5;241m*\u001b[39mkey, takeable\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_takeable)\n\u001b[1;32m-> 1097\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_tuple(key)\n\u001b[0;32m   1098\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1099\u001b[0m     \u001b[38;5;66;03m# we by definition only have the 0th axis\u001b[39;00m\n\u001b[0;32m   1100\u001b[0m     axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexing.py:1594\u001b[0m, in \u001b[0;36m_iLocIndexer._getitem_tuple\u001b[1;34m(self, tup)\u001b[0m\n\u001b[0;32m   1593\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_getitem_tuple\u001b[39m(\u001b[38;5;28mself\u001b[39m, tup: \u001b[38;5;28mtuple\u001b[39m):\n\u001b[1;32m-> 1594\u001b[0m     tup \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_tuple_indexer(tup)\n\u001b[0;32m   1595\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m suppress(IndexingError):\n\u001b[0;32m   1596\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_lowerdim(tup)\n",
-      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexing.py:904\u001b[0m, in \u001b[0;36m_LocationIndexer._validate_tuple_indexer\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    902\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(key):\n\u001b[0;32m    903\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 904\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_key(k, i)\n\u001b[0;32m    905\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m    906\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    907\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLocation based indexing can only have \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    908\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_valid_types\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] types\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    909\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexing.py:1512\u001b[0m, in \u001b[0;36m_iLocIndexer._validate_key\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1510\u001b[0m \u001b[38;5;66;03m# check that the key has a numeric dtype\u001b[39;00m\n\u001b[0;32m   1511\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_numeric_dtype(arr\u001b[38;5;241m.\u001b[39mdtype):\n\u001b[1;32m-> 1512\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.iloc requires numeric indexers, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00marr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1514\u001b[0m \u001b[38;5;66;03m# check that the key does not exceed the maximum size of the index\u001b[39;00m\n\u001b[0;32m   1515\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(arr) \u001b[38;5;129;01mand\u001b[39;00m (arr\u001b[38;5;241m.\u001b[39mmax() \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m len_axis \u001b[38;5;129;01mor\u001b[39;00m arr\u001b[38;5;241m.\u001b[39mmin() \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m-\u001b[39mlen_axis):\n",
-      "\u001b[1;31mIndexError\u001b[0m: .iloc requires numeric indexers, got ['  Górnik Zabrze  ' 0 2 '  Cracovia  ' Timestamp('2021-07-18 00:00:00')\n 0.0 3.0 -0.2 0.2 None None 0]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
     "for t in team:\n",
-    "    dic=get_team_form(t)\n",
+    "    dic,dateDif=get_team_form(t)\n",
     "    \n",
     "    for key in dic:\n",
-    "        for index in out_data.iterrows():\n",
-    "            if key==index[0] and t in out_data.iloc[index][0]:\n",
-    "                out_data.at[index[0]][\"Accumulated_home_points\"]=dic[key]\n",
-    "            if key==index[0] and t in out_data.iloc[index][3]:\n",
-    "                out_data.at[index[0]][\"Accumulated_away_points\"]=dic[key]    "
+    "        for i in range(0,out_data.shape[0]):\n",
+    "            if key==i and t in out_data.iloc[i][0]:\n",
+    "                out_data.iat[i,10]=dic[key]\n",
+    "                out_data.iat[i,12]=dateDif[key]\n",
+    "            if key==i and t in out_data.iloc[i][3]:\n",
+    "                out_data.iat[i,11]=dic[key]\n",
+    "                out_data.iat[i,13]=dateDif[key]    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 369,
    "id": "79139aea",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[167], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(out_data\u001b[38;5;241m.\u001b[39miat([\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m]))\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(out_data.iat([0][1]))"
+    "# print(team[0],get_team_form(team[0])[1])\n",
+    "# sum_points_home=[]\n",
+    "# sum_points_away=[]\n",
+    "# for i in range(0,out_data.shape[0]):\n",
+    "#     if i in range(0,4):\n",
+    "#         sum_points_home.append(out_data.iloc[i,5])\n",
+    "#         sum_points_away.append(out_data.iloc[i,6])\n",
+    "#     else:\n",
+    "#         pass    "
    ]
   }
  ],
