--- a/Ekstraklasa.ipynb
+++ b/Ekstraklasa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 546,
    "id": "6e45c3f4-b0bf-4e59-b1ee-f0454039dc72",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 547,
    "id": "6268a614-da96-44a5-8de8-4b03c5a74031",
    "metadata": {
     "scrolled": true,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 548,
    "id": "5a31fb79-d327-4c6a-9f0b-1575a200fb67",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 549,
    "id": "3ede9425",
    "metadata": {
     "tags": []
@@ -93,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 550,
    "id": "e6aaf926",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXTRA_POINTS_WIN=0.2\n",
+    "EXTRA_POINTS_WIN=0.25\n",
     "EXTRA_POINTS_DRAW=0.0\n",
     "POINTS_WIN=3.0\n",
     "POINTS_DRAW=1.0\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 551,
    "id": "17e9e21f-6040-4faf-b06f-ef7cf98e56e3",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 552,
    "id": "35835fd7-9c01-450d-ab9a-939d428e4f5d",
    "metadata": {
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 553,
    "id": "06a0f67d-4dd9-4026-a05e-cc221f8a3706",
    "metadata": {
     "tags": []
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 554,
    "id": "a61ab541-2b5a-432d-b137-d14aae62a092",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 555,
    "id": "c40f100c-d0be-49d1-b828-0a115a62b5dd",
    "metadata": {
     "tags": []
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 556,
    "id": "1525b176-f603-4b07-acbe-b22689e1d9f3",
    "metadata": {
     "tags": []
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 557,
    "id": "6e90118e",
    "metadata": {
     "tags": []
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 558,
    "id": "5ecfcc82-9556-430a-a96c-367589daec41",
    "metadata": {
     "tags": []
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 559,
    "id": "c47736a2-ae3f-4e6f-bac7-80cf3db74aac",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 560,
    "id": "97ead2d8",
    "metadata": {},
    "outputs": [],
@@ -377,10 +377,10 @@
     "\n",
     "def get_team_form(team_name:str)->dict:\n",
     "    tmpTeam=(out_data[out_data[\"Away_team\"].str.contains(team_name) | out_data[\"Home_team\"].str.contains(team_name)])\n",
-    "    \n",
+    "    tmpTeam=tmpTeam.sort_values(by=[\"date\"],ascending=True)\n",
     "    dateDiff=[]\n",
     "    for i in range(1,len(tmpTeam.iloc[:,0])):\n",
-    "        dateDiff.append(tmpTeam.iloc[i][4]-tmpTeam.iloc[i-1][4])\n",
+    "        dateDiff.append((tmpTeam.iloc[i][4]-tmpTeam.iloc[i-1][4])/(60*60*24))\n",
     "    dateDiff.insert(0,0)\n",
     "\n",
     "    tmpTeam[\"Data_difference\"]=dateDiff\n",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 561,
    "id": "9177017c",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 562,
    "id": "91b77cc4",
    "metadata": {},
    "outputs": [],
@@ -458,20 +458,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 563,
    "id": "79139aea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(team[0],get_team_form(team[0])[1])\n",
-    "# sum_points_home=[]\n",
-    "# sum_points_away=[]\n",
-    "# for i in range(0,out_data.shape[0]):\n",
-    "#     if i in range(0,4):\n",
-    "#         sum_points_home.append(out_data.iloc[i,5])\n",
-    "#         sum_points_away.append(out_data.iloc[i,6])\n",
-    "#     else:\n",
-    "#         pass    "
+    "\n",
+    "out_data['Add_Accumulated_home_points'] = pd.to_numeric(out_data['Add_Accumulated_home_points'], errors='coerce').astype(float)\n",
+    "out_data['Add_Accumulated_away_points'] = pd.to_numeric(out_data['Add_Accumulated_away_points'], errors='coerce').astype(float)\n",
+    "\n",
+    "largest_values=[]\n",
+    "largest_values.append(out_data[\"Add_Accumulated_home_points\"].nlargest(9))\n",
+    "largest_values.append(out_data[\"Add_Accumulated_away_points\"].nlargest(9))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 564,
+   "id": "481e496c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_data=out_data.assign(Should_add_accumulated_points_home=None)\n",
+    "out_data=out_data.assign(Should_add_accumulated_points_away=None)\n",
+    "out_data=out_data.sort_values(by=[\"date\"],ascending=True)\n",
+    "for i in range(0,out_data.shape[0]):\n",
+    "    if i in range(0,9):\n",
+    "        out_data.iat[i,14],out_data.iat[i,15]=1,1\n",
+    "    if (out_data.iat[i,12] == largest_values).any():\n",
+    "         out_data.iat[i,14]=1\n",
+    "    if (out_data.iat[i,13] == largest_values).any():\n",
+    "         out_data.iat[i,15]=1\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 569,
+   "id": "d5a9ef67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for team_name in team:\n",
+    "    modified_rows=(out_data[out_data[\"Away_team\"].str.contains(team_name) | out_data[\"Home_team\"].str.contains(team_name)])\n",
+    "    indexes=[]\n",
+    "    for i in range(0,modified_rows.shape[0]):\n",
+    "        if modified_rows.iat[i,14]==1 and modified_rows.iat[i,0]==team_name:\n",
+    "            indexes+=list(range(i,i+4))\n",
+    "            if i+4>modified_rows.shape[0]:\n",
+    "                break\n",
+    "            else:\n",
+    "                i=i+4\n",
+    "        if modified_rows.iat[i,15]==1 and modified_rows.iat[i,3]==team_name:\n",
+    "            indexes+=list(range(i,i+4))\n",
+    "            if i+4>modified_rows.shape[0]:\n",
+    "                break    \n",
+    "            else:\n",
+    "                i=i+4\n",
+    "\n",
+    "\n",
+    "print(indexes)"
    ]
   }
  ],
